--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
     <section class="section">
       <div class="container">
 
+      <h1 id="currentTime">test</h1>
+      <h1 id="currentTime2">test</h1>
+      <h1 id="diff">test</h1>
+      <button onMouseDown="buttonDown()" onMouseUp="buttonUp()">Hello</button>
 
       </div>
     </section>
