--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset=utf-8>
-    <title>Project Name</title>
+    <title>Boop It</title>
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
@@ -11,13 +11,13 @@
       <div class="container">
         <div class="nav-left">
           <a class="nav-item is-brand" href="#">
-            PROJECT NAME
+            Boop It
           </a>
         </div>
 
         <div class="nav-right">
           <span class="nav-item">
-            <a class="button is-primary" href="#">
+            <a href="https://github.com/gamemash/boop_it" class="button is-primary" href="#">
               <span class="icon">
                 <i class="fa fa-github"></i>
               </span>
@@ -32,9 +32,7 @@
       <div class="container">
 
       <h1 id="currentTime">test</h1>
-      <h1 id="currentTime2">test</h1>
-      <h1 id="diff">test</h1>
-      <button onMouseDown="buttonDown()" onMouseUp="buttonUp()">Hello</button>
+      <button onMouseDown="buttonDown()" onMouseUp="buttonUp()">FASTER!</button>
 
       </div>
     </section>
@@ -43,12 +41,12 @@
       <div class="container">
         <div class="content has-text-centered">
           <p>
-            <strong>Project Name</strong> by <a href="">Author</a>. The source code is licensed
+            <strong>Boop It</strong> by <a href="">Oliver Ponder</a>. The source code is licensed
             <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
             is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC ANS 4.0</a>.
           </p>
           <p>
-            <a class="icon" href="https://github.com/gamemash">
+            <a class="icon" href="https://github.com/gamemash/boop_it">
               <i class="fa fa-github"></i>
             </a>
           </p>
