Groove to the beat

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
     <section class="section">
       <div class="container">
 
-      <h1 id="currentTime">test</h1>
+      <h1 id="currentTime">0</h1>
       <button onMouseDown="buttonDown()" onMouseUp="buttonUp()">FASTER!</button>
+
+      <div class="beatResponsive">
+      Woop
+      </div>
 
       </div>
     </section>
