--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <section class="section">
-      <div class="container">
+      <div class="container" id="game">
 
       <h1 id="currentTime">0</h1>
       <button onMouseDown="buttonDown()" onMouseUp="buttonUp()">FASTER!</button>
