--- a/index.html
+++ b/index.html
@@ -37,12 +37,16 @@
 
       <div id="buttons">
         <button class="button is-large" onMouseDown="checkAction('boop')" onMouseUp="buttonUp()">Boop</button>
-        <button class="button is-large" onMouseDown="checkAction('froop')" onMouseUp="buttonUp()">Froop</button>
-        <button class="button is-large" onMouseDown="checkAction('shazorp')" onMouseUp="buttonUp()">Shazorp</button>
+        <button class="button is-large" onMouseDown="checkAction('twablang')" onMouseUp="buttonUp()">Twablang</button>
+        <button class="button is-large" onMouseDown="checkAction('klerp')" onMouseUp="buttonUp()">Klerp</button>
       </div>
 
       <div class="beatResponsive" id="dance">
       Woop
+      </div>
+
+      <div id="score">
+        0
       </div>
 
       </div>
